--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:           pretty
 # Setup
 title:               Karll
 tagline:             '블로그'
-description:         '내블로그'
+description:         'Karll 블로그'
 url:                 https://kor-karll.github.io/
 baseurl:             ''
 paginate:            5
